# agent-runtime

./: .gitignore  CLAUDE.md  README.md  VERSIONS.md
auth/keycloak/: README.md  realm-export.json
docker/: .env.example  docker-compose.langfuse.yml  docker-compose.observability.yml  docker-compose.yml  init-db.sql
docs/: PRD.md  architecture.md  mvp-sequence-diagram.md  repository-layout.md  technology-stack.md
gateway/: kong.yml
scripts/: dev-setup.sh  migrate.py  offline-pack.sh
services/api/: Dockerfile  README.md  pyproject.toml
services/api/src/agent_runtime_api/: __init__.py  main.py
services/api/src/agent_runtime_api/routes/: agents.py  health.py  runs.py  tenants.py
services/worker/: Dockerfile  README.md  pyproject.toml
services/worker/src/agent_runtime_worker/: __init__.py  worker.py
services/worker/src/agent_runtime_worker/activities/: __init__.py  llm_call.py  tool_exec.py
services/worker/src/agent_runtime_worker/workflows/: __init__.py  agent_run.py
