[project]
name = "agent-runtime-api"
version = "0.1.0"
description = "Control plane API for Agent Runtime"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agent-runtime-core",
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "redis>=5.0",
    "temporalio>=1.5",
    "python-jose[cryptography]>=3.3",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_runtime_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# Local development: reference core package
[tool.uv.sources]
agent-runtime-core = { path = "../../packages/core", editable = true }
