[project]
name = "agent-runtime-api"
version = "0.1.0"
description = "Control plane API for Agent Runtime"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agent-runtime-core",
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "sqlalchemy==2.0.36",
    "asyncpg==0.30.0",
    "redis==5.2.1",
    "temporalio==1.8.0",
    "python-jose[cryptography]==3.3.0",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "httpx==0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_runtime_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# Local development: reference core package
[tool.uv.sources]
agent-runtime-core = { path = "../../packages/core", editable = true }
