[project]
name = "agent-runtime-worker"
version = "0.1.0"
description = "Execution plane worker for Agent Runtime (Temporal)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agent-runtime-core",
    "temporalio>=1.5",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pydantic-ai>=0.0.20",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "redis>=5.0",
    "httpx>=0.27",
    "boto3>=1.34",
    "langfuse>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_runtime_worker"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# Local development: reference core package
[tool.uv.sources]
agent-runtime-core = { path = "../../packages/core", editable = true }
