[project]
name = "agent-runtime-worker"
version = "0.1.0"
description = "Execution plane worker for Agent Runtime (Temporal)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agent-runtime-core",
    "temporalio==1.8.0",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "pydantic-ai==0.0.40",
    "sqlalchemy==2.0.36",
    "asyncpg==0.30.0",
    "redis==5.2.1",
    "httpx==0.28.1",
    "boto3==1.35.81",
    "langfuse==2.57.5",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_runtime_worker"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# Local development: reference core package
[tool.uv.sources]
agent-runtime-core = { path = "../../packages/core", editable = true }
